--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -6,30 +6,41 @@ menu:
   VEGETABLE:
     - name: Dhal curry
       price: $10
+      image: /images/menu120725/dahl curry.jpg
     - name: Carrot 🥕 curry
       price: $15
+      image: /images/menu120725/carrot curry.jpg
     - name: Cucumber curry
       price: $15
+      image: /images/menu120725/cucumber curry.jpg
     - name: Beetroot tempered
       price: $15
+      image: /images/menu120725/beetroot tempered.jpg
     - name: Broccoli 🥦 mallum
       price: $15
+      image: /images/menu120725/brocoli mallum.jpg
   MEAT:
     - name: Beef curry
       price: $18
+      image: /images/menu120725/beef curry.jpg
     - name: Chicken devilled
       price: $18
+      image: /images/menu120725/chicken devilled.jpg
     - name: Fish curry
       price: $28
+      image: /images/menu120725/fish curry.jpg
     - name: Lamb curry
       price: $25
   SPECIALS:
-    - name: Chicken Biriyani with Ryta and egg
+    - name: Chicken Biriyani with Raita and egg
       price: $28
+      image: /images/menu120725/biriyani.jpg
     - name: String hoppers with beef or chicken curry and coconut sambal
       price: $28
+      image: /images/menu120725/string hoppers.jpg
     - name: Bacon fried rice
       price: $20
+      image: /images/menu120725/bacon fried rice.jpg
 ---
 
 <section class="section-main">
