--- a/manufood-website/src/gallery.njk
+++ b/manufood-website/src/gallery.njk
@@ -12,7 +12,7 @@ title: Gallery - MaNu Foods
 
 <section class="section-main gallery-section">
   <div class="content-wrapper">
-    {% set posts = collections.gallery | reverse %}
+    {% set posts = collections.gallery  %}
     {% include "partials/gallery-grid.njk" %}
   </div>
 </section>
