Update menu items and next pickup date; adjust prices and descriptions

--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -4,43 +4,36 @@ title: MaNu Food
 description: Authentic Sri Lankan Home Cooked Meals in Yarrabilba
 menu:
   VEGETABLE:
-    - name: Dhal curry
+    - name: Dahl with spinach
+      price: $15
+    - name: Dahl curry
       price: $10
-      image: /images/menu120725/dahl curry.jpg
-    - name: Carrot 🥕 curry
+    - name: Radish tempeh
       price: $15
-      image: /images/menu120725/carrot curry.jpg
-    - name: Cucumber curry
+    - name: Bean curry
       price: $15
-      image: /images/menu120725/cucumber curry.jpg
-    - name: Beetroot tempered
+    - name: Pumpkin black curry
       price: $15
-      image: /images/menu120725/beetroot tempered.jpg
-    - name: Broccoli 🥦 mallum
+    - name: Cabbage mallum
       price: $15
-      image: /images/menu120725/brocoli mallum.jpg
+    - name: 1 Vegetable rotti
+      price: $5
   MEAT:
-    - name: Beef curry
-      price: $18
-      image: /images/menu120725/beef curry.jpg
-    - name: Chicken devilled
-      price: $18
-      image: /images/menu120725/chicken devilled.jpg
-    - name: Fish curry
-      price: $28
-      image: /images/menu120725/fish curry.jpg
-    - name: Lamb curry
-      price: $25
-  SPECIALS:
-    - name: Chicken Biriyani with Raita and egg
-      price: $28
-      image: /images/menu120725/biriyani.jpg
-    - name: String hoppers with beef or chicken curry and coconut sambal
-      price: $28
-      image: /images/menu120725/string hoppers.jpg
-    - name: Bacon fried rice
+    - name: Chicken liver curry
+      price: $15
+    - name: Beef pepper 🌶️
       price: $20
-      image: /images/menu120725/bacon fried rice.jpg
+    - name: Pork black curry
+      price: $23
+    - name: Fish devilled
+      price: $28
+  SPECIALS:
+    - name: Beef kottu
+      price: $28
+    - name: Beef Kottu with cheese
+      price: $30
+    - name: Special fried rice with bacon
+      price: $20
 ---
 
 <section class="section-main">
@@ -81,7 +74,7 @@ menu:
       <h2>Next Pickup Date</h2>
       <div class="pickup-info">
         <div class="date-badge">
-          <span class="date">12</span>
+          <span class="date">19</span>
           <span class="month">July</span>
           <span class="year">2025</span>
         </div>
@@ -89,7 +82,7 @@ menu:
           <p>
             <strong>Location:</strong> Parks Estate, Yarrabilba, QLD</p>
           <p>
-            <strong>Order Before:</strong> 9th July </p>
+            <strong>Order Before:</strong> 16th July </p>
           <p>
             <strong>Pickup Time:</strong> After 3:00 PM</p>
         </div>
@@ -101,6 +94,7 @@ menu:
 <section class="section menu">
   <div class="content-wrapper">
     <h2>This Week's Menu</h2>
+    <p class="menu-date">Prepared on Saturday, July 19th, 2025</p>
     <div class="menu-card">
       {% include "partials/menu-items.njk" %}
     </div>
